@@ -494,7 +494,7 @@ index|]
 argument_list|,
 name|Locale
 operator|.
-name|ROOT
+name|ENGLISH
 argument_list|)
 expr_stmt|;
 name|dfi
